# core

./: CrossProduct.hs  LICENSE  Makefile  README  SpiritCore.hs  Timetabling.hs  spiritcore.cabal
Data/: AllTimetables.hs  DB.hs  Day.hs  Lecture.hs  Lecturer.hs  Lectures.hs  OneLecture.hs  Room.hs  Semester.hs  Students.hs  Time.hs  Timetable.hs
