name:               spiritcore
version:            0.1
synopsis:           Core of Spirit
build-type:         Simple
cabal-version:      >=1.2
license:            BSD3
license-file:       LICENSE
author:             Christoph Schmidt
maintainer:         spirit@unsane.org

executable spiritcore
  main-is:          SpiritCore.hs
  build-depends:    base >= 3 && < 5,
                    haskell98

